remove formsubmit, switch personal to biz email

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="links">
                 <a href="#about">About Us</a>
                 <a href="#clientele">Clientele</a>
-                <a href="#contact">Contact Us</a>
+                <a href="mailto:hello@bespokewebdev.com">Contact Us</a>
             </div>
         </nav>
 
@@ -168,7 +168,7 @@
                 > -->
             </p>
 
-            <a class="cta" href="mailto:cohencoombs@outlook.com">
+            <a class="cta" href="mailto:hello@bespokewebdev.com">
                 <button>
                     <span style="opacity: 0; font-size: 1.5rem;" class="material-symbols-rounded"
                         >chat</span
@@ -399,9 +399,20 @@
             <p style="line-height: normal;" class="about">
                 Get in touch with us today to discuss your next website project.
             </p>
-            <form
+
+            <br /><br />
+
+            <center>
+                <a class="cta" href="mailto:hello@bespokewebdev.com" style="text-decoration: none;">
+                    <button style="display: flex; align-items: center; gap: 1rem;">
+                        <span style="opacity: 0;" class="material-symbols-rounded">chat</span>
+                        Get in touch now
+                    </button>
+                </a>
+            </center>
+
+            <!-- <form
                 id="formsubmit"
-                action="https://formsubmit.co/cohencoombs@outlook.com"
                 method="POST"
             >
                 <span style="opacity: 0;" class="material-symbols-rounded">chat</span>
@@ -476,9 +487,9 @@
                 <button type="submit">Send Inquiry</button>
                 <p style="margin: 10px 0; text-align: center; color: #999;">
                     or contact us directly at
-                    <a href="mailto:cohencoombs@outlook.com">cohencoombs@outlook.com</a>
+                    <a href="mailto:test@test.com">test</a>
                 </p>
-            </form>
+            </form> -->
         </section>
 
         <footer>
@@ -488,9 +499,9 @@
                 </h3>
                 <a
                     style="font-size: 1.1rem; font-weight: 500;"
-                    href="mailto:cohencoombs@outlook.com"
+                    href="mailto:hello@bespokewebdev.com"
                 >
-                    cohencoombs@outlook.com
+                    hello@bespokewebdev.com
                 </a>
 
                 <div class="socials">
