--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -319,7 +319,7 @@
                     success.
                     <br />
                     <br />
-                    <a style="text-decoration: none;" href="mailto:cohencoombs@outlook.com">
+                    <a style="text-decoration: none;" href="mailto:hello@bespokewebdev.com">
                         <button>Let's Talk</button>
                     </a>
                 </p>
@@ -342,9 +342,9 @@
                 </h3>
                 <a
                     style="font-size: 1.1rem; font-weight: 500;"
-                    href="mailto:cohencoombs@outlook.com"
+                    href="mailto:hello@bespokewebdev.com"
                 >
-                    cohencoombs@outlook.com
+                    hello@bespokewebdev.com
                 </a>
 
                 <div class="socials">
