--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 <div>
                     <h2 class="title">Award-Winning Website Design</h2>
                     <p>
-                        In 2023, Bespoke Web Dev was an award winner for
+                        In 2023 & 24, Bespoke Web Dev was an award winner for
                         <a
                             href="https://techbehemoths.com/awards-2023/winners/web-design/bespoke-web-dev"
                             target="_blank"
